# eddy255

./: .gitignore  Cargo.toml  Eddy255.curve  LICENSE  README.md  curve.py  safecurveverify.py  verify.sh
.github/workflows/: test.yml
SafeCurves/: a  b  l  p  rigid  shape  y1
benches/: eddy255.rs
src/: lib.rs
src/curves/: mod.rs
src/fields/: fq.rs  fr.rs
